[package]
name = "gpuequiv"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.19"
log = "0.4"
bytemuck = "1.14"
futures-intrusive = "0.5"
ndarray = "0.15"
regex-lite = "0.1.5"
# For faster hashsets and hashmaps
rustc-hash = "1.1"

serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[dev-dependencies]
serde_json.workspace = true
env_logger.workspace = true
pollster.workspace = true

[workspace.dependencies]
gpuequiv = { path = "." }

serde_json = "1.0"
env_logger = "0.11"
pollster = { version = "0.3", features = ["macro"] }

[workspace]
members = [
    "run-wasm",
]
